# Split-data-for-object-detection

./: CMakeLists.txt  README.md  main.cpp
